--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Discord Emojier is a service that allows Telex to send messages as emojis to Discord.">
+    <meta name="keywords" content="Discord, Emojier, Telex, Emojis, Integration">
+    <meta name="author" content="Your Name or Company">
     <title>Integrate Discord Emojier with Telex</title>
     <style>
         body {
@@ -11,21 +16,36 @@
             margin: 0;
             padding: 20px;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 90vh;
             color: #333;
         }
+
         h1 {
             text-align: center;
             margin-bottom: 20px;
         }
+
+        a {
+            color: #007BFF;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
+
 <body>
     <div>
         <h1>Discord Emojier</h1>
-        <p>A service that allows Telex to send messages as emojis to Discord</p> 
+        <p>A service that allows Telex to send messages as emojis to Discord</p>
+        <p>For more details, visit the <a href="/docs" target="_blank">API Documentation</a>.</p>
     </div>
 </body>
+
 </html>
